--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,8 +1,11 @@
 .container {
     background-color: var(--blue-ltu);
-    padding: clamp(1rem, 5vw, 2rem);
+    padding-inline: clamp(1rem, 5vw, 2rem);
+    padding-block: 1rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 h1 {
