--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -8,7 +8,7 @@
     width: 100%;
 }
 
-h1 {
+.container h1 {
     color: white;
-    font-size: clamp(1rem, 5vw, 2rem);
+    font-size: clamp(1rem, 5vw, 1.8rem);
 }
