--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,6 @@ html {
     --blue-ltu: rgb(19, 48, 91);
     --red-delete: rgb(199, 0, 0);
     --black-btn: black;
-    --grey-inactive-light: lightgray;
-    --grey-inactive-strong: gray;
+    --grey-light: lightgray;
+    --grey-strong: gray;
 }
