--- a/src/components/tabs/TabButtonsMobile.module.css
+++ b/src/components/tabs/TabButtonsMobile.module.css
@@ -6,7 +6,7 @@
     height: 0;
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
-    border-top: 6px solid var(--black-btn);
+    border-top: 6px solid black;
 }
 
 .upsideDown {
