Add new global values for green and yellow.

--- a/src/global.css
+++ b/src/global.css
@@ -11,4 +11,6 @@ html {
     --black-btn: black;
     --grey-light: lightgray;
     --grey-strong: gray;
+    --green-resolved: rgb(80, 200, 120);
+    --yellow-not-resolved: rgb(255, 170, 51);
 }
