--- a/src/components/questionCard/questCardHeader/QuestionHeader.module.css
+++ b/src/components/questionCard/questCardHeader/QuestionHeader.module.css
@@ -1,10 +1,40 @@
 .container {
-	background-color: black;
-	color: white;
-	display: flex;
-	flex-direction: row;
-	font-size: 1rem;
-	font-weight: 600;
-	justify-content: space-between;
-	padding: 0.5rem;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    font-size: 0.75rem;
+    font-weight: 600;
+    justify-content: space-between;
+    padding: 0.5rem;
+    align-items: center;
+}
+
+.courseTitle {
+    font-size: 1rem;
+}
+
+.status {
+    border-radius: 8px;
+    padding: 0.2rem 0.6rem;
+    font-size: 0.8rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+    height: 1.2rem;
+}
+
+.resolved {
+    background-color: var(--green-resolved);
+}
+
+.notResolved {
+    background-color: var(--yellow-not-resolved);
+}
+
+.icon {
+    width: 1rem;
+    height: 1rem;
+    margin-top: 0.12rem;
 }
