--- a/src/components/questionCard/questionCardHeader/QuestionHeader.module.css
+++ b/src/components/questionCard/questionCardHeader/QuestionHeader.module.css
@@ -14,6 +14,44 @@
     font-size: 1rem;
 }
 
+.icon_section {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: center; /* Ensure all icons align */
+}
+
+.iconWrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+/* The tooltip box (hidden by default) */
+.tooltip {
+    visibility: hidden;
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding: 0.1rem 0.2rem;
+    border: 1px solid black;
+    border-radius: 1px;
+    position: absolute;
+    /* top: 155%; */
+    right: 50%;
+    white-space: nowrap;
+    font-size: 0.75rem;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 1000; /* Ensure it appears above everything */
+}
+
+/* Show tooltip on hover */
+.iconWrapper:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
+
 .status {
     border-radius: 8px;
     padding: 0.2rem 0.6rem;
@@ -25,6 +63,12 @@
     height: 1.2rem;
 }
 
+.icon {
+    width: 1rem; /* Match the height of .status */
+    height: 1rem;
+    margin-top: 0.13rem;
+}
+
 .resolved {
     background-color: var(--green-resolved);
 }
@@ -33,8 +77,8 @@
     background-color: var(--yellow-not-resolved);
 }
 
-.icon {
-    width: 1rem;
-    height: 1rem;
-    margin-top: 0.12rem;
+.visibility_icon {
+    width: 0.9rem;
+    height: 0.9rem;
+    margin-top: 0.1rem;
 }
