--- a/src/global.css
+++ b/src/global.css
@@ -10,7 +10,7 @@ html {
     --red-delete: rgb(199, 0, 0);
     --black-btn: black;
     --grey-light: lightgray;
-    --grey-strong: gray;
+    --grey-strong: rgb(128, 128, 128);
     --green-resolved: rgb(80, 200, 120);
     --yellow-not-resolved: rgb(255, 170, 51);
 }
