Created question card that uses props. (#25)
* Add some icons

* Create and style QuestionCard.

* Add new icons

* Add new global values for green and yellow.

* Add dummy data for question card.

* Add dummy data to HomeLimited and update HomeLimited css.

* Add props to QuestionCard

* Update QuestionHeader with props and css.

* Renamed folder for QuestionHeader.

* Added new icons.

* Change data in dummy data.

* Add new translations for time ago and question visibility.

* Add data props to middle and bottom section of question card.

* Updated export from question card header.

* Added style for public and non-public questions.

* Add and use new icon for time

* Move getTime logic from MiddleCard to utils.

--- a/src/global.css
+++ b/src/global.css
@@ -9,9 +9,12 @@ html {
     --blue-ltu: rgb(19, 48, 91);
     --red-delete: rgb(199, 0, 0);
     --btnDark-bg: black;
+    --text-default: black;
     --btnDark-text: white;
     --btnDark-hover: gray;
     --grey-light: lightgray;
+    --green-resolved: rgb(80, 200, 120);
+    --yellow-not-resolved: rgb(255, 170, 51);
     --grey-strong: gray;
     --tabBtn-active: white;
     --tabBtn-inactive: rgb(241, 239, 239);
