--- a/src/pages/homeLimited/HomeLimited.module.css
+++ b/src/pages/homeLimited/HomeLimited.module.css
@@ -1,3 +1,7 @@
-.test {
-    background-color: black;
+.card_container {
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    padding: 0 1rem;
+    margin-top: 1rem;
 }
