--- a/src/components/loader/Loader.module.css
+++ b/src/components/loader/Loader.module.css
@@ -1,10 +1,13 @@
 .container {
-    flex: 1;
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--overlay-loader);
 }
 
 .loader {
