--- a/src/components/questionCard/QuestionCard.module.css
+++ b/src/components/questionCard/QuestionCard.module.css
@@ -2,8 +2,9 @@
     border-radius: 10px;
     overflow: hidden;
     width: 100%;
+    block-size: fit-content;
     max-width: 50rem;
-    min-width: 20rem;
+    /* min-width: 20rem; */
     margin: 0 auto;
     box-sizing: border-box;
     border: 2px solid grey;
