--- a/src/components/header/NavMenu.module.css
+++ b/src/components/header/NavMenu.module.css
@@ -65,6 +65,7 @@
         border: 1px solid white;
         padding-left: 30px;
         background-color: var(--blue-ltu);
+        z-index: 9;
     }
 
     .menuLinks.menuOpen {
