--- a/src/components/search/searchWithFilters/searchFilter/SearchFilter.module.css
+++ b/src/components/search/searchWithFilters/searchFilter/SearchFilter.module.css
@@ -1,4 +1,63 @@
 .container {
+    width: 100%;
+    overflow: scroll;
+    /*scrollbar-width: none; /* Firefox */
+    /*-ms-overflow-style: none;  IE and Edge */
+}
+
+.container::-webkit-scrollbar {
+    /* display: none; Chrome, Safari */
+}
+
+.filtersWrapper {
+    align-items: center;
     display: flex;
-    gap: 40px;
+    gap: 15px;
+    width: max-content;
+}
+
+.title {
+    font-size: clamp(14px, 2vw, 16px);
+    font-weight: 600;
+}
+
+.arrow {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px; /* Space between text and arrow */
+    font-size: 1.2em;
+    font-weight: bold;
+    color: red; /* Customize the color */
+    text-decoration: none; /* Optional */
+    border: none;
+    background-color: transparent;
+    position: absolute;
+}
+
+.arrow::after {
+    content: "";
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border-right: 3px solid currentColor; /* Arrow color */
+    border-top: 3px solid currentColor;
+    transform: rotate(45deg);
+    margin-left: 5px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.arrow:hover::after {
+    transform: rotate(45deg) translateX(3px); /* Fancy hover effect */
+}
+
+.arrow:first-child {
+    transform: rotate(180deg);
+}
+
+.arrow:last-child {
+    right: 50px;
+}
+
+.arrow:last-child:hover::after {
+    transform: rotate(45deg) translateY(-3px); /* Fancy hover effect */
 }
