--- a/src/global.css
+++ b/src/global.css
@@ -25,6 +25,8 @@ html {
     --input-label: black;
     --error: rgb(180, 38, 38);
     --overlay-loader: rgba(19, 48, 91, 0.3);
+    --btnLight-bg: white;
+    --btnLight-text: black;
 }
 
 .app {
