--- a/src/components/tabs/Tabs.module.css
+++ b/src/components/tabs/Tabs.module.css
@@ -1,6 +1,7 @@
 /* Container for the entire tab component */
 .container {
     position: relative;
+    display: flex;
 }
 
 /* Style for the tab buttons container */
