attach mousewheel and mobile swipe to horizontal filter list

--- a/src/components/search/searchWithFilters/searchFilter/SearchFilter.module.css
+++ b/src/components/search/searchWithFilters/searchFilter/SearchFilter.module.css
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    overflow: scroll;
+    overflow-x: auto;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE and Edge */
 }
