--- a/src/components/search/searchWithFilters/SearchWithFilters.module.css
+++ b/src/components/search/searchWithFilters/SearchWithFilters.module.css
@@ -1,3 +1,17 @@
 .container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.filterWrapper {
+    transition: opacity 0.5s ease;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.show {
+    pointer-events: all;
+    opacity: 1;
 }
