--- a/src/components/search/searchWithFilters/SearchWithFilters.module.css
+++ b/src/components/search/searchWithFilters/SearchWithFilters.module.css
@@ -6,12 +6,11 @@
 }
 
 .filterWrapper {
-    transition: opacity 0.5s ease;
-    opacity: 0;
+    visibility: hidden;
     pointer-events: none;
 }
 
 .show {
     pointer-events: all;
-    opacity: 1;
+    visibility: visible;
 }
