finished integrating QuestionList into HomeLimited

--- a/src/components/questionCard/questionCardHeader/QuestionHeader.module.css
+++ b/src/components/questionCard/questionCardHeader/QuestionHeader.module.css
@@ -11,7 +11,8 @@
 }
 
 .courseTitle {
-    font-size: 1rem;
+    font-size: clamp(0.9rem, 2vw, 1.1rem);
+    text-wrap: balance;
 }
 
 .icon_section {
@@ -25,6 +26,10 @@
     position: relative;
     display: flex;
     align-items: center;
+}
+
+.resolvedContainer {
+    text-wrap: nowrap;
 }
 
 /* The tooltip box (hidden by default) */
@@ -83,15 +88,17 @@
     margin-top: 0.1rem;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 600px) {
     .container {
         flex-direction: column;
-        align-items: flex-start; /* Align items to the left */
+        align-items: center; /* Align items to the left */
     }
-
+    .courseTitle {
+        text-align: center;
+    }
     .icon_section {
         margin-top: 0.5rem; /* Add some spacing */
-        justify-content: flex-start;
+        justify-content: center;
         width: 100%;
     }
 }
