--- a/src/components/questionCard/questionCardBottom/QuestionCardBottom.module.css
+++ b/src/components/questionCard/questionCardBottom/QuestionCardBottom.module.css
@@ -2,8 +2,8 @@
     border-top: 1px solid grey;
     padding: 1rem 2rem;
     display: flex;
-    flex-direction: row;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .tag_container {
@@ -14,4 +14,9 @@
     font-size: 0.7rem;
     font-weight: 600;
     display: inline-block;
+}
+@media (max-width: 600px) {
+    .container {
+        justify-content: center;
+    }
 }
