--- a/src/pages/homeLimited/HomeLimited.module.css
+++ b/src/pages/homeLimited/HomeLimited.module.css
@@ -1,5 +1,12 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    padding-top: clamp(1rem, 5vw, 4rem);
+    padding-inline: clamp(15px, 4vw, 10rem);
+    align-items: center;
+}
+
 .card_container {
-    box-sizing: border-box;
     display: flex;
     justify-content: center;
     padding: 0 1rem;
