impl filtering on resolved status

--- a/src/components/questionCardList/QuestionCardList.module.css
+++ b/src/components/questionCardList/QuestionCardList.module.css
@@ -5,3 +5,10 @@
     align-items: center;
     width: 100%;
 }
+
+.headerRow {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
