finally filtering is working pretty good

--- a/src/components/myQASection/MyQASection.module.css
+++ b/src/components/myQASection/MyQASection.module.css
@@ -6,6 +6,7 @@
     border: 2px solid var(--tabBtn-inactive);
     padding-inline: clamp(11px, 3vw, 80px);
     padding-top: clamp(1.7rem, 5vw, 3rem);
+    min-height: 20rem;
 }
 
 .btnsContainer {
