--- a/src/components/questionCardList/QuestionCardList.module.css
+++ b/src/components/questionCardList/QuestionCardList.module.css
@@ -11,7 +11,6 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    font-size: clamp(1rem, 4vw, 1.7rem);
     margin-bottom: -15px;
 }
 
@@ -19,10 +18,22 @@
     margin-top: 15rem;
 }
 
+.container > h3 {
+    font-size: clamp(0.8rem, 2.5vw, 1.5rem);
+    margin-top: 4rem;
+}
+
+.headerRow > h3 {
+    font-size: clamp(1rem, 2.7vw, 1.7rem);
+}
+
 @media (max-width: 600px) {
     .headerRow {
         flex-direction: column;
-        align-items: center;
         gap: 12px;
+    }
+
+    .headerRow > h3 {
+        text-align: center;
     }
 }
