--- a/src/components/search/searchWithFilters/searchFilter/SearchFilter.module.css
+++ b/src/components/search/searchWithFilters/searchFilter/SearchFilter.module.css
@@ -12,7 +12,7 @@
     -ms-overflow-style: none; /* IE and Edge */
 }
 
-.container::-webkit-scrollbar {
+.scrollContainer::-webkit-scrollbar {
     display: none; /*Chrome, Safari */
 }
 
@@ -21,9 +21,6 @@
     display: flex;
     gap: 15px;
     width: max-content;
-    /* Adjust min-height with respect to the height of filterWrapper in SearchWithFilter.module.css to prevent
-    components jumping around*/
-    min-height: 46px;
 }
 
 .title {
