--- a/src/components/input/Input.module.css
+++ b/src/components/input/Input.module.css
@@ -16,17 +16,14 @@
 }
 
 .inputWrapper {
-    transition:
-        border-color 0.5s ease,
-        padding 0.5s ease;
+    transition: border-color 0.5s ease;
     border: 3px solid transparent;
-    padding: 0;
+    padding: 2px;
 }
 
 .highlight {
     border-radius: 6px;
     border-color: var(--input-focused);
-    padding: 2px;
 }
 
 .label {
