create input with suggestions, use if as course input in Ask A Question

--- a/src/components/forms/askAQuestion/AskAQuestion.module.css
+++ b/src/components/forms/askAQuestion/AskAQuestion.module.css
@@ -10,3 +10,15 @@
     align-items: center;
     gap: clamp(20px, 3vw, 30px);
 }
+
+.submitBtn {
+    border: none;
+    background-color: var(--btnDark-bg);
+    color: var(--btnDark-text);
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.submitBtn:hover {
+    background-color: var(--btnDark-hover);
+}
