--- a/src/components/forms/askAQuestion/AskAQuestion.module.css
+++ b/src/components/forms/askAQuestion/AskAQuestion.module.css
@@ -3,6 +3,13 @@
     width: 100%;
 }
 
+.loaderContainer {
+    margin-top: 10rem;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
 .form {
     width: 100%;
     display: flex;
