--- a/src/components/input/InputWithPrefetchedSuggestions.module.css
+++ b/src/components/input/InputWithPrefetchedSuggestions.module.css
@@ -11,6 +11,7 @@
     transition: opacity 0.5s ease;
     pointer-events: none;
     padding: 0px 5px 5px 5px;
+    z-index: 2;
 }
 
 .suggestionBtn {
