create toggle component and make the form submit correct attributes

--- a/src/components/forms/askAQuestion/AskAQuestion.module.css
+++ b/src/components/forms/askAQuestion/AskAQuestion.module.css
@@ -18,6 +18,10 @@
     gap: clamp(20px, 3vw, 30px);
 }
 
+.inputPair {
+    width: 100%;
+}
+
 .submitBtn {
     border: none;
     background-color: var(--btnDark-bg);
