--- a/src/components/forms/askAQuestion/AddATag.module.css
+++ b/src/components/forms/askAQuestion/AddATag.module.css
@@ -2,7 +2,7 @@
     border-radius: 6px;
     border: 2px solid var(--input-idle);
     padding-inline: clamp(0.6rem, 4vw, 1rem);
-    flex: 0.5;
+    flex: 0.8;
     display: flex;
     flex-direction: column;
     padding-block: 2rem;
@@ -44,4 +44,37 @@
     height: 100%;
     padding-inline: 18px;
     border: 5px solid white;
+    cursor: pointer;
+}
+
+.addBtn:hover {
+    background-color: var(--btnDark-hover);
+}
+
+.addedTagsContainer {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.addedTag {
+    border: none;
+    background-color: var(--grey-light);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    width: min-content;
+    padding-block: 1px;
+    padding-inline: 8px;
+    cursor: pointer;
+}
+
+.addedTag > p {
+    text-wrap: nowrap;
+}
+
+.addedTag > img {
+    height: 80%;
 }
