--- a/src/components/forms/askAQuestion/PublicQuestionToggle.module.css
+++ b/src/components/forms/askAQuestion/PublicQuestionToggle.module.css
@@ -2,12 +2,13 @@
     border-radius: 6px;
     border: 2px solid var(--input-idle);
     padding-inline: clamp(0.6rem, 4vw, 1rem);
-    flex: 0.5;
+    flex: 0.2;
     display: flex;
     justify-content: space-between;
     padding-block: 2rem;
-    gap: 15px;
+    flex-direction: column;
     align-items: center;
+    gap: 30px;
 }
 
 .itemsWrapper {
@@ -17,6 +18,7 @@
 }
 
 .itemsWrapper > p {
+    text-align: center;
     color: var(--inputIdle-text);
     font-size: clamp(12px, 2.5vw, 14px);
 }
@@ -24,7 +26,7 @@
 .itemsWrapper > h5 {
     color: var(--text-default);
     font-weight: 600;
-
+    text-align: center;
     font-size: 14px;
 }
 
@@ -38,8 +40,5 @@
 
 @media (max-width: 600px) {
     .container {
-        flex-direction: column;
-        align-items: center;
-        gap: 30px;
     }
 }
