--- a/src/components/forms/askAQuestion/AddATag.module.css
+++ b/src/components/forms/askAQuestion/AddATag.module.css
@@ -2,7 +2,7 @@
     border-radius: 6px;
     border: 2px solid var(--input-idle);
     padding-inline: clamp(0.6rem, 4vw, 1rem);
-    flex: 0.8;
+    flex: 0.75;
     display: flex;
     flex-direction: column;
     padding-block: 2rem;
@@ -25,6 +25,7 @@
 .infoContainer > p {
     color: var(--inputIdle-text);
     font-size: clamp(12px, 2.5vw, 14px);
+    margin-right: 5px;
 }
 
 .inputContainer {
@@ -77,4 +78,18 @@
 
 .addedTag > img {
     height: 80%;
+}
+
+@media (max-width: 600px) {
+    .inputContainer {
+        flex-direction: column;
+    }
+
+    .addBtn {
+        padding-block: 10px;
+    }
+
+    .addedTagsContainer {
+        justify-content: center;
+    }
 }
