--- a/src/components/forms/askAQuestion/AskAQuestion.module.css
+++ b/src/components/forms/askAQuestion/AskAQuestion.module.css
@@ -59,3 +59,9 @@
 .submitBtn:hover {
     background-color: var(--btnDark-hover);
 }
+
+@media (max-width: 600px) {
+    .inputPair {
+        flex-direction: column;
+    }
+}
