--- a/src/components/questionCard/questionCardBottom/QuestionCardBottom.module.css
+++ b/src/components/questionCard/questionCardBottom/QuestionCardBottom.module.css
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
 }
 
-.tag_container {
+.tag-container {
     background-color: rgb(211, 211, 211);
     color: black;
     padding: 0.3rem 1rem;
