--- a/src/components/questionCard/questionCardHeader/QuestionHeader.module.css
+++ b/src/components/questionCard/questionCardHeader/QuestionHeader.module.css
@@ -15,7 +15,7 @@
     text-wrap: balance;
 }
 
-.icon_section {
+.icon-section {
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -80,11 +80,11 @@
     background-color: var(--yellow-not-resolved);
 }
 
-.visibility_icon {
+/* .visibility-icon {
     width: 0.9rem;
     height: 0.9rem;
     margin-top: 0.1rem;
-}
+} */
 
 @media (max-width: 600px) {
     .container {
@@ -94,7 +94,7 @@
     .courseTitle {
         text-align: center;
     }
-    .icon_section {
+    .icon-section {
         margin-top: 0.5rem; /* Add some spacing */
         justify-content: center;
         width: 100%;
