Create teacher dashboard and functionality to view the teachers questions related to a selected course.

--- a/src/components/teacherDashboard/teacherDashBoard/TeacherDashboard.module.css
+++ b/src/components/teacherDashboard/teacherDashBoard/TeacherDashboard.module.css
@@ -16,6 +16,13 @@
   color: #000;
 }
 
+.loader {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 900px) {
   .course-manager-container {
     flex-direction: column;
