--- a/src/components/teacherDashboard/topicItemToolbar/TopicItemToolbar.module.css
+++ b/src/components/teacherDashboard/topicItemToolbar/TopicItemToolbar.module.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding-inline: 1rem;
-    gap: 2.5rem;
+    gap: 2rem;
 }
 
 .toolbar-icon {
@@ -14,4 +15,11 @@
 
 .toolbar-icon:hover {
     background-color: var(--grey-light);
+}
+
+@media (max-width: 600px) {
+    .toolbar-container {
+        gap: 0.5rem;
+        overflow-y: auto;
+    }
 }
