--- a/src/components/teacherDashboard/topicItem/TopicItem.module.css
+++ b/src/components/teacherDashboard/topicItem/TopicItem.module.css
@@ -17,8 +17,13 @@
     text-decoration: line-through;
 }
 
-.edit-container,
-.delete-container {
+.is-managing {
+    font-weight: bolder;
+    text-decoration: underline;
+    text-underline-offset: 4px;
+}
+
+.edit-container {
     border: 2px solid #2563eb;
     border-radius: 4px;
     padding: 1rem;
@@ -37,6 +42,9 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    border: 2px solid var(--red-delete);
+    border-radius: 4px;
+    padding: 1.5rem;
 }
 
 .topic-delete-btn-container {
@@ -45,4 +53,17 @@
     justify-content: end;
     padding: 4px;
     gap: 0.5rem;
+}
+
+@media (max-width: 600px) {
+    .delete-container {
+        flex-direction: column;
+        align-items: start;
+        justify-content: start;
+        padding: 0.5rem;
+    }
+
+    .topic-delete-btn-container {
+        width: 100%;
+    }
 }
